# SDA-Lista

./: CMakeLists.txt  README.md  interfata.txt
Proiect C++/: App.cpp  IteratorLP.cpp  IteratorLP.h  Lista.cpp  Lista.h
Teste/: TestExtins.cpp  TestScurt.cpp
